2025-11-27 REVISIONE(core): Riscrive l'inizializzazione del DB e abilita FTS5
Riscrive completamente la logica di inizializzazione dei database per risolvere i deadlock all'avvio su Android.
- APRE PDF ANCHE IN ANDROID
- Sostituita la fragile logica 'copia e ripara' per VecchioDb.db con una strategia robusta di 'crea e popola' o 'verifica e aggiorna'.
- La creazione della tabella FTS (Full-Text Search) è ora gestita come un upgrade, garantendo la compatibilità con le installazioni esistenti.
- Resa la configurazione iniziale 'platform-aware': i percorsi di default (es. PercorsoPdf) vengono ora impostati correttamente in base al sistema operativo (Windows/Android).
- Abilitato il backend 'sqflite_common_ffi' anche su Android e aggiunta la dipendenza 'sqlite3_flutter_libs' per abilitare il supporto a FTS5 su tutte le piattaforme.

Questo risolve i crash 'no such module: fts5' e i blocchi all'avvio.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,10 @@ dependencies:
   sqflite_common_ffi_web: ^1.0.1+2
   data_table_2: ^2.5.10
   url_launcher: ^6.2.2
-  
-  # FIX: Aggiunge la libreria nativa di SQLite con FTS5 per Android
   sqlite3_flutter_libs: ^0.5.0
+
+  # FIX: Aggiunto il visualizzatore PDF interno per Android
+  flutter_pdfview: ^1.3.2
 
 dev_dependencies:
   flutter_test:
