--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,6 @@ dependencies:
   data_table_2: ^2.5.10
   url_launcher: ^6.2.2
   sqlite3_flutter_libs: ^0.5.0
-
-  # FIX: Aggiunto il visualizzatore PDF interno per Android
   flutter_pdfview: ^1.3.2
 
 dev_dependencies:
@@ -43,3 +41,4 @@ flutter:
   assets:
     - assets/fonts/
     - assets/databases/
+    - assets/images/ # Aggiunta la cartella per le immagini
